--- a/internetProgramming_TeemProject/wwwroot/index.html
+++ b/internetProgramming_TeemProject/wwwroot/index.html
@@ -2,19 +2,63 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="css/loadcss.css">
+    <title>教务管理系统</title>
+    <link rel="stylesheet" type="text/css" href="css/indexStyle.css">
 </head>
 <body>
-    <div id="login">
-        <h1>Login</h1>
-        <form method="POST">
-            <input type="text" required="required" placeholder="账号" name="user">
-            <br>
-            <input type="password" required="required" placeholder="密码" name="pwd">
-            <br>
-            <button type="submit" class="but" >登录/注册</button>
-        </form>
+    <header>
+        <h2>教务管理系统</h2>
+        <button class="cta-btn" id="open">登录</button>
+      </header>
+    <div class="modal-container" id="modal">
+        <div class="modal">
+          <button class="close-btn" id="close">×
+          </button>
+          <div class="modal-header">
+            <h3>登录</h3>
+          </div>
+          <div class="modal-content">
+            <form class="modal-form" action="POST">
+              <div>
+                <label for="name">学号</label>
+                <input
+                  type="text"
+                  id="name"
+                  placeholder="输入学号"
+                  class="form-input"
+                />
+              </div>
+              <div>
+                <label for="password">密码</label>
+                <input
+                  type="password"
+                  id="password"
+                  placeholder="输入密码"
+                  class="form-input"
+                />
+              </div>
+              <input type="submit" value="登录" class="submit-btn" />
+            </form>
+          </div>
+        </div>
     </div>
+    <div class="filter-container">
+      <input
+        type="text"
+        id="filter"
+        class="filter"
+        placeholder="输入查找学院"
+      />
+    </div>
+
+    <div id="posts-container"></div>
+
+    <div class="loader">
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+    </div>
+
+    <script src="js/indexJs.js"></script>
 </body>
 </html>
