--- a/internetProgramming_TeemProject/wwwroot/index.html
+++ b/internetProgramming_TeemProject/wwwroot/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/indexStyle.css">
 </head>
 <body>
+    <img src="resource/nwu_logo.png" height="120" width="470">
     <header>
         <h2>教务管理系统</h2>
         <button class="cta-btn" id="open">登录</button>
