--- a/internetProgramming_TeemProject/wwwroot/load.html
+++ b/internetProgramming_TeemProject/wwwroot/load.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <img src="resource/nwu_logo.png">
+    <button class="register" id="register">注册</button>
     <div class="container" method="POST">
         <form id ="form" class="form">
             <h2>NWU教务管理系统</h2>
