--- a/internetProgramming_TeemProject/wwwroot/load.html
+++ b/internetProgramming_TeemProject/wwwroot/load.html
@@ -7,8 +7,9 @@
     <title>NWU教务管理系统</title>
 </head>
 <body>
-    <img src="resource/nwu_logo.png">
-    <button class="register" id="register">注册</button>
+<header>
+    <a href="https://www.nwu.edu.cn/index.htm"><img src="resource/nwu_logo.png" height="90" width="351" ></a>
+</header>
     <div class="container" method="POST">
         <form id ="form" class="form">
             <h2>NWU教务管理系统</h2>
