实现在非权界面展示教师

--- a/internetProgramming_TeemProject/wwwroot/institute.html
+++ b/internetProgramming_TeemProject/wwwroot/institute.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     <div id="institutes">
     </div>
     
-    <script src="js/insstitute.js"></script>
+    <script src="js/institute.js"></script>
     <script type="text/javascript">
     </script>
 </body>
