--- a/internetProgramming_TeemProject/wwwroot/institute.html
+++ b/internetProgramming_TeemProject/wwwroot/institute.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
-<head>
-    <meta charset="UTF-8">
+<!-- saved from url=(0038)https://localhost:44397/institute.html -->
+<html lang="zh-cn"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/institute.css" rel="stylesheet">
     <title>学院</title>
 </head>
 <body>
     <div id="institutes">
-    </div>
+    <div class="institute" id="bbdee09c-089b-4d30-bece-44df5923716c">
+
+        <div class="introduction">
+            <h2>信息学院</h2>
+            <p>西北大学信息科学与技术学院成立于2005年5月，是由前计算机科学系和电子科学系为主体整合而成。</p></div>
+        <div class="teachers" style="display: block;"><div class="teacher" id="ca268a19-0f39-4d8b-b8d6-5bace54f8027">
+            <div class="teacherNum"><p>教师编号:201401</p></div>
+        <div class="teacherName"><p>何路</p></div>
+        <div class="teacherIntroduction"> </div>
+        </div><div class="teacher" id="7346d7ba-d17c-9014-05ae-fb0169ed0a13">
+            <div class="teacherNum"><p>教师编号:201402</p></div>
+            <div class="teacherName"><p>耿国华</p></div>
+        <div class="teacherIntroduction"> </div>
+        </div><div class="teacher" id="494710f6-6202-fbe9-d827-1dafde50daa2">
+            <div class="teacherNum"><p>教师编号:201403</p></div>
+            <div class="teacherName"><p>徐彩霞</p></div>
+            <div class="teacherIntroduction"> <p>null</p></div>
+        </div></div></div><div class="institute" id="6fb600c1-9011-4fd7-9234-881379716440">
+
+        <div class="introduction"> <h2>法学院</h2><p>西北大学法学教育始于1907年的陕西法政学堂，是中国现代法学教育中历史最为悠久的学校之一。</p></div>
+        <div class="teachers" style="display: block;"><div class="teacher" id="2ea277d6-50cc-025e-0935-8646f06ba2bd">
+            <div class="teacherNum"><p>教师编号:200001</p></div>
+            <div class="teacherName"><p>任瀚宇</p></div>
+        <div class="teacherIntroduction"> </div>
+        </div></div></div><div class="institute" id="5efc910b-2f45-43df-afee-620d40542853">
+
+        <div class="introduction"><h2><p>历史学院</p></h2><p>西北大学历史学院其前身西北大学文博学院（1988年设立）源自于1937年设立的西北联合大学历史系，许寿裳任系主任。</p></div>
+        <div class="teachers" style="display: block;"><div class="teacher" id="47b70abc-98b8-4fdc-b9fa-5dd6716f6e6b">
+            <div class="teacherNum"><p>教师编号:201501</p></div>
+            <div class="teacherName"><p>王豪</p></div>
+        <div class="teacherIntroduction"> </div>
+        </div><div class="teacher" id="5d27fb1c-f235-e1ce-fe63-ae6e664a27fa">
+            <div class="teacherNum"><p>教师编号:201502</p></div>
+            <div class="teacherName"><p>郭孟源</p></div>
+        <div class="teacherIntroduction"> </div>
+        </div></div></div></div>
     
-    <script src="js/insstitute.js"></script>
+    <script src="./学院_files/institute.js.下载"></script>
     <script type="text/javascript">
     </script>
-</body>
-</html>
+
+</body></html>
