登录界面实现，教师，学生基本构建

--- a/internetProgramming_TeemProject/wwwroot/load.html
+++ b/internetProgramming_TeemProject/wwwroot/load.html
@@ -11,7 +11,7 @@
     <a href="https://www.nwu.edu.cn/index.htm"><img src="resource/nwu_logo.png" height="90" width="351" ></a>
 </header>
     <div class="container" method="POST">
-        <form id ="form" class="form">
+        <form id ="form" class="form" action="javascript:void(0);" onsubmit="getKeyValue()">
             <h2>NWU教务管理系统</h2>
             <div class="form-control">
                 <label for="userid">账号</label>
