完成学生的前端实现

--- a/internetProgramming_TeemProject/wwwroot/student.html
+++ b/internetProgramming_TeemProject/wwwroot/student.html
@@ -12,10 +12,13 @@
         <table>
             <tr>
                 <th>课程</th>
-                <th></th>
-                <th>简介</th>
-                <th>更改教师信息</th>
-                <th>删除</th>
+                <th>开始时间</th>
+                <th>理论课时</th>
+                <th>实验课时</th>
+                <th>课程信息</th>
+                <th>课程得分</th>
+                <th>实验得分</th>
+                <th>平时分</th>
             </tr>
             <tbody id="courseTable"></tbody>
         </table>
@@ -26,7 +29,7 @@
             <input type="text" id="newpassword1" placeholder="新密码">
             <input type="text" id="newpassword2" placeholder="请再次输入">
             <input type="submit" value="确认">
-            <button onclick="closeInput()">&#10006;</button>
+            <button type="button" onclick="closeInput()">&#10006;</button>
         </form>
     </div>
     <script src="js/student.js"></script>
