前端post添加身份校验

--- a/internetProgramming_TeemProject/wwwroot/load.html
+++ b/internetProgramming_TeemProject/wwwroot/load.html
@@ -23,11 +23,11 @@
             </div>
             <div>
                 <label for="student">学生</label>
-                <input type="radio" id="student" name="identity" value="student" checked>
+                <input type="radio" id="student" name="identity" value="0" checked>
                 <label for="teacher">教师</label> 
-                <input type="radio" id="teacher" name="identity" value="teacher" >
+                <input type="radio" id="teacher" name="identity" value="1" >
                 <label for="admin">管理员</label>
-                <input type="radio" id="admin" name="identity" value="admin">
+                <input type="radio" id="admin" name="identity" value="2">
             </div>
             <button type="submit">登录</button>
         </form>
